welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: too many arguments for method isFacingTrail: ()Boolean
    if(isFacingTrail(Color.RED)){avance();baisseBrosse();leveBrosse();}else{droite();}
                    ^